Pop up listview

--- a/MC-Dex/MainWindow.xaml
+++ b/MC-Dex/MainWindow.xaml
@@ -71,7 +71,7 @@
 
         
 
-        <ContentControl DockPanel.Dock="Bottom" x:Name="contentControl">
+        <ContentControl DockPanel.Dock="Bottom" Name="contentControl">
             <local:pageObjet/>
         </ContentControl>
         
