--- a/MC-Dex/textBoxCraftUC.xaml
+++ b/MC-Dex/textBoxCraftUC.xaml
@@ -40,63 +40,63 @@
                         
                         
                         <Border Grid.Column="0" Grid.Row="0" BorderBrush="{StaticResource brush}" BorderThickness="0 0 2 2">
-                            <Button Width="50" Height="35" Grid.Column="2" BorderThickness="0">
+                            <Button Width="50" Height="35" Grid.Column="2" BorderThickness="0" Click="Button1">
                                 <Button.Background>
                                     <ImageBrush ImageSource="img\ajouter.png" Stretch="Uniform"/>
                                 </Button.Background>
                             </Button>
                         </Border>
                         <Border Grid.Column="1" Grid.Row="0" BorderBrush="{StaticResource brush}" BorderThickness="2 0 2 2">
-                            <Button Width="50" Height="35" Grid.Column="2" BorderThickness="0">
+                            <Button Width="50" Height="35" Grid.Column="2" BorderThickness="0" Click="Button2">
                                 <Button.Background>
                                     <ImageBrush ImageSource="img\ajouter.png" Stretch="Uniform"/>
                                 </Button.Background>
                             </Button>
                         </Border>
                         <Border Grid.Column="2" Grid.Row="0" BorderBrush="{StaticResource brush}" BorderThickness="2 0 0 2">
-                            <Button Width="50" Height="35" Grid.Column="2" BorderThickness="0">
+                            <Button Width="50" Height="35" Grid.Column="2" BorderThickness="0" Click="Button3">
                                 <Button.Background>
                                     <ImageBrush ImageSource="img\ajouter.png" Stretch="Uniform"/>
                                 </Button.Background>
                             </Button>
                         </Border>
                         <Border Grid.Column="0" Grid.Row="1" BorderBrush="{StaticResource brush}" BorderThickness="0 2 2 2">
-                            <Button Width="50" Height="35" Grid.Column="2" BorderThickness="0">
+                            <Button Width="50" Height="35" Grid.Column="2" BorderThickness="0" Click="Button4">
                                 <Button.Background>
                                     <ImageBrush ImageSource="img\ajouter.png" Stretch="Uniform"/>
                                 </Button.Background>
                             </Button>
                         </Border>
                         <Border Grid.Column="1" Grid.Row="1" BorderBrush="{StaticResource brush}" BorderThickness="2 2 2 2">
-                            <Button Width="50" Height="35" Grid.Column="2" BorderThickness="0">
+                            <Button Width="50" Height="35" Grid.Column="2" BorderThickness="0" Click="Button5">
                                 <Button.Background>
                                     <ImageBrush ImageSource="img\ajouter.png" Stretch="Uniform"/>
                                 </Button.Background>
                             </Button>
                         </Border>
                         <Border Grid.Column="2" Grid.Row="1" BorderBrush="{StaticResource brush}" BorderThickness="2 2 0 2">
-                            <Button Width="50" Height="35" Grid.Column="2" BorderThickness="0">
+                            <Button Width="50" Height="35" Grid.Column="2" BorderThickness="0" Click="Button6">
                                 <Button.Background>
                                     <ImageBrush ImageSource="img\ajouter.png" Stretch="Uniform"/>
                                 </Button.Background>
                             </Button>
                         </Border>
                         <Border Grid.Column="0" Grid.Row="2" BorderBrush="{StaticResource brush}" BorderThickness="0 2 2 0">
-                            <Button Width="50" Height="35" Grid.Column="2" BorderThickness="0">
+                            <Button Width="50" Height="35" Grid.Column="2" BorderThickness="0" Click="Button7">
                                 <Button.Background>
                                     <ImageBrush ImageSource="img\ajouter.png" Stretch="Uniform"/>
                                 </Button.Background>
                             </Button>
                         </Border>
                         <Border Grid.Column="1" Grid.Row="2" BorderBrush="{StaticResource brush}" BorderThickness="2 2 2 0">
-                            <Button Width="50" Height="35" Grid.Column="2" BorderThickness="0">
+                            <Button Width="50" Height="35" Grid.Column="2" BorderThickness="0" Click="Button8">
                                 <Button.Background>
                                     <ImageBrush ImageSource="img\ajouter.png" Stretch="Uniform"/>
                                 </Button.Background>
                             </Button>
                         </Border>
                         <Border Grid.Column="2" Grid.Row="2" BorderBrush="{StaticResource brush}" BorderThickness="2 2 0 0">
-                            <Button Width="50" Height="35" Grid.Column="2" BorderThickness="0">
+                            <Button Width="50" Height="35" Grid.Column="2" BorderThickness="0" Click="Button9">
                                 <Button.Background>
                                     <ImageBrush ImageSource="img\ajouter.png" Stretch="Uniform"/>
                                 </Button.Background>
@@ -108,7 +108,7 @@
                     <Image Source="img\flecheCraft.png" Width="50" Margin="10"/>
 
                     <Border  Width="50" Height="50">
-                        <Button Width="50" Height="35" Grid.Column="2" BorderThickness="0">
+                        <Button Width="50" Height="35" Grid.Column="2" BorderThickness="0" Click="Button10">
                             <Button.Background>
                                 <ImageBrush ImageSource="img\ajouter.png" Stretch="Uniform"/>
                             </Button.Background>
