--- a/MC-Dex/MainWindow.xaml
+++ b/MC-Dex/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MC_Dex"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800"
+        Title="MC-DEX - Objet" Height="450" Width="800"
         Icon="img\command_block.png">
 
 
