--- a/WPF_App/textBoxCraftUC.xaml
+++ b/WPF_App/textBoxCraftUC.xaml
@@ -41,7 +41,7 @@
                         
                         
                         <Border Grid.Column="0" Grid.Row="0" BorderBrush="{StaticResource brush}" BorderThickness="0 0 2 2">
-                            <Button Width="50" Height="35" Grid.Column="2" BorderThickness="0" Click="Button1">
+                            <Button Width="50" Height="35" Grid.Column="2" BorderThickness="0" Click="Button1" x:Name="Button1Image">
                                 <Button.Background>
                                     <ImageBrush ImageSource="img\ajouter.png" Stretch="Uniform"/>
                                 </Button.Background>
