--- a/WPF_App/PopUpListObject.xaml
+++ b/WPF_App/PopUpListObject.xaml
@@ -11,7 +11,7 @@
         ResizeMode="NoResize"
         BorderThickness="1" BorderBrush="White">
 
-    <DockPanel >
+    <DockPanel>
         <DockPanel.Background>
             <ImageBrush ImageSource="img\background.png" Stretch="UniformToFill"/>
         </DockPanel.Background>
@@ -19,7 +19,6 @@
             <Border.Background>
                 <ImageBrush ImageSource="img\texture_grass.png" Stretch="UniformToFill"/>
             </Border.Background>
-            <!--<TextBlock Text="Liste des objets" FontFamily="{StaticResource Minecraft}" FontSize="22" HorizontalAlignment="Center" Margin="0,0,0,20"/>-->
             <Image Source="img\liste_des_objets.png" Width="250" Margin="0,5,0,15"/>
         </Border>
 
@@ -30,21 +29,17 @@
         </Border>
 
  
-        <ListBox ItemsSource="{Binding Items}" x:Name="listBoxItem" HorizontalAlignment="Center" Background="{x:Null}" BorderThickness="0" ScrollViewer.VerticalScrollBarVisibility="Hidden">
+        <ListBox ItemsSource="{Binding Items}" x:Name="listBoxItem" HorizontalAlignment="Center" Background="{x:Null}" BorderThickness="0" 
+                 ScrollViewer.VerticalScrollBarVisibility="Hidden">
             <ListBox.ItemTemplate>
-
                 <DataTemplate>
-                    
-
-            <Border Background="#BA0E0D0D" CornerRadius="12" Width="220">
-                <StackPanel Orientation="Horizontal" Margin="2">
-                    <Image Source="{Binding Image}" Width="50" Margin="20,2,10,2"/>
-                    <TextBlock Text="{Binding Nom}" FontFamily="{StaticResource Minecraft}" VerticalAlignment="Center" FontSize="20" Foreground="#C5C5C5" Margin="0,0,20,0"/>
-                </StackPanel>
-            </Border>
-
+                    <Border Background="#BA0E0D0D" CornerRadius="12" Width="220">
+                        <StackPanel Orientation="Horizontal" Margin="2">
+                            <Image Source="{Binding Image}" Width="50" Margin="20,2,10,2"/>
+                            <TextBlock Text="{Binding Nom}" FontFamily="{StaticResource Minecraft}" VerticalAlignment="Center" FontSize="20" Foreground="#C5C5C5" Margin="0,0,20,0"/>
+                        </StackPanel>
+                    </Border>
                 </DataTemplate>  
-
             </ListBox.ItemTemplate>
         </ListBox>
 
