--- a/WPF_App/PopUpListObject.xaml
+++ b/WPF_App/PopUpListObject.xaml
@@ -61,7 +61,7 @@
                 <DataTemplate>
                     <Border Background="#BA0E0D0D" CornerRadius="12" Width="220">
                         <StackPanel Orientation="Horizontal" Margin="2">
-                            <Image Source="{Binding Image, Converter={StaticResource string2ImageConverter}}" Width="50" Margin="20,2,10,2"/>
+                            <Image Source="{Binding Image, Converter={StaticResource string2ImageConverter}}" Width="50" Height="50" Margin="20,2,10,2"/>
                             <TextBlock Text="{Binding Nom}" FontFamily="{StaticResource Minecraft}" VerticalAlignment="Center" FontSize="20" Foreground="#C5C5C5" Margin="0,0,20,0"/>
                         </StackPanel>
                     </Border>
